# context-1-data-gen

./: .env.example  .gitignore  Chroma Context-1_ Training a Self-Editing Search Agent.md  README.md  TASKS.md  pyproject.toml
agentic_search_data_gen/: __init__.py
agentic_search_data_gen/core/: __init__.py  context1_client.py  distract.py  explore.py  extend.py  indexing.py  rerank.py  utils.py  verify.py
agentic_search_data_gen/domains/epstein/: README.md  __main__.py  explore.py  index.py  prompts.py  utils.py  verify.py
agentic_search_data_gen/domains/patents/: README.md  __main__.py  extract.py  generate.py  index.py  process.py  prompts.py  seeds.txt
agentic_search_data_gen/domains/sec/: README.md  __main__.py  collect.py  explore.py  extend.py  index.py  prompts.py  seeds.txt  utils.py  verify.py
agentic_search_data_gen/domains/web/: README.md  __main__.py  distract.py  explore.py  extend.py  index.py  prompts.py  seeds.txt  utils.py  verify.py
cloudflare/context1_frontdoor/: package.json  wrangler.toml
cloudflare/context1_frontdoor/src/: index.js
cloudflare/context1_frontdoor/test/: index.test.js
notebooks/: context1_colab_server.ipynb
tests/: test_context1_client.py  test_core_utils.py
